--- a/public_html/assets/css/styles.css
+++ b/public_html/assets/css/styles.css
@@ -11,6 +11,7 @@ div.carouselHeight{
 div.carouselHeight img{
     width:100%;  
     height:20rem;
+    display:fluid;
 }
 .h1ShadowBlack, .navbar-brand{
     text-shadow:0 0 5px black;
@@ -25,4 +26,32 @@ div.carouselHeight img{
 li a.nav-link{
   font-size:1.2rem;
   text-shadow:0 0 2px white;
+}
+#kontakt, #anfahrt, #rechtsgebiete, #impressum, #datenschutz{
+    width:100%;
+    margin-top:15%;
+    height:100%;    
+}
+#anfahrt, #zurPerson{
+    margin:12% 0 5% 20%; 
+}
+
+.recht{ 
+    padding:5%;
+    background-color:lightgrey;
+    background-image:url('assets/images/paragraph.jpg');
+    background-size:50% 100%;
+    background-position: right;
+    background-repeat: no-repeat;
+    margin-bottom:20%;
+    border-radius:7%;
+}
+#impressum, #datenschutz{
+    margin-top:8%;
+    padding:5%;
+    height:100%;
+}
+#beratung, #verfahren, #schlichtung{
+    display: none;
+    text-align:left;
 }
