--- a/public_html/templates/kontakt.html
+++ b/public_html/templates/kontakt.html
@@ -1,7 +1,7 @@
 <div id="kontakt" class="container">
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-1"></div>
+        <div class="col-11 col-md-6">
             <h4>Kontakt&nbsp;&nbsp;<i class="far fa-envelope"></i></h4>
             <form>
                 <div class="form-group">
@@ -16,10 +16,18 @@
                     <label for="formTextArea">Ihre Nachricht *</label>
                     <textarea class="form-control" id="formTextarea" rows="3" required></textarea>
                 </div>
-                <button class="btn-info"><i class="far fa-envelope"></i>&nbsp;&nbsp;Absenden</button>
+                <div class="form-group">
+                <input type="checkbox" id="dataCheck"/>&nbsp;&nbsp;&nbsp;
+            Ich habe zur Kenntnis genommen und bin damit einverstanden, dass die von mir gesendeten Daten von der Kanzlei Landvogt gespeichert werden. Die <a href="#/datenschutz">Datenschutzerklärung</a> habe ich ebenfalls zur Kenntnis genommen.
+            <br><br></div>
+                <button class="btn-info" id="btnEmail"><i class="far fa-envelope"></i>&nbsp;&nbsp;Absenden</button>
             </form>
         </div>
-        <div class="col-3"></div>
+        <div class="col-11 col-md-5 text-center">
+          <br><br><br>
+          <h4 class="mt-5">Tel: 06033 - 71170<br><br><br>
+            Fax: 06033 - 8906294<br></h4>
+        </div>
     </div>
     <hr>
 </div>
