--- a/public_html/templates/sliderMain.html
+++ b/public_html/templates/sliderMain.html
@@ -1,4 +1,4 @@
- <div id="myCarousel" class="carousel slide slideShow" data-ride="carousel">
+<div id="myCarousel" class="carousel slide slideShow" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -12,20 +12,20 @@
             <div class="container">
               <div class="carousel-caption text-left">
                 <h1 class="h1ShadowBlack">Ihr Anwalt in Rockenberg und Umgebung</h1>
-                <p>- Alles, was Recht ist -</p>
-                <p><a class="btn btn-lg btn-light" href="#/kontakt" role="button">Kontakt</a></p>
+                <h3 class="h3ShadowBlack">-  Alles, was Recht ist -<br><br></h3>
+                <p><a class="btn btn-lg btn-light btnKontakt" href="#/kontakt" role="button">Kontakt</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
            <div class="carouselHeight shadow">   
-            <img class="second-slide d-block img-fluid" src="assets/images/handshake.png" alt="Second slide">
+            <img class="second-slide d-block img-fluid" src="assets/images/handshakeBig.jpg" alt="Second slide">
            </div>
             <div class="container">
               <div class="carousel-caption text-dark">
                 <h1 class="h1ShadowWhite">Die Kanzlei Ihres Vertrauens</h1>
-                <p>- Ihr juristisches Anliegen in guten Händen -</p>
-                <p><a class="btn btn-lg btn-primary" href="#/kontakt" role="button">Kontakt</a></p>
+                <h3 class="h3ShadowWhite">- Ihr juristisches Anliegen in guten Händen -</h3>
+                <p><a class="btn btn-lg btn-primary btnKontakt" href="#/kontakt" role="button">Kontakt</a></p>
                 
               </div>
             </div>
@@ -36,9 +36,9 @@
               </div>
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1 class="h1ShadowBlack">Nicht ein kleines Stück - der ganze Kuchen</h1>
-                <p>- Sie sollten sich nur mit dem Besten zufrieden geben -</p>
-                <p><a class="btn btn-lg btn-primary" href="#/kontakt" role="button">Kontakt</a></p>
+                <h1 class="h1ShadowBlack">Nicht ein Kuchenstück - der ganze Kuchen</h1>
+                <h3 class="h3ShadowBlack">Sie sollten sich nur mit dem Besten zufrieden geben</h3>
+                <p><a class="btn btn-lg btn-primary btnKontakt" href="#/kontakt" role="button">Kontakt</a></p>
               </div>
             </div>
           </div>            
@@ -52,3 +52,6 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a> <br>
+</div>
+
+    
