--- a/public_html/templates/rechtsgebiete.html
+++ b/public_html/templates/rechtsgebiete.html
@@ -1,7 +1,7 @@
 <div id="rechtsgebiete" class="container text-center">   
     <div class="row">
         <span class="col-12"><h4><i class="fas fa-balance-scale"></i>&nbsp;&nbsp;&nbsp;&nbsp;Sie können mich bei Rechtfragen zu folgenden Gebieten ansprechen&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-balance-scale"></i></h4><br></span>   
-        <div class="col-4 text-center mb-2">
+        <div class="col-12 col-sm-4 text-center mb-2">
             <div class="recht"> 
                 <strong>Familienrecht</strong><br>
                 &bullet; Scheidung<br>
@@ -9,7 +9,7 @@
                 &bullet; Sorgerecht<br>
             </div>
         </div>
-        <div class="col-4 text-center mb-2">
+        <div class="col-12 col-sm-4 text-center mb-2">
             <div class="recht">  
                 <strong>Erbrecht</strong><br>
                 <strong>Verkehrsrecht</strong><br>
@@ -17,7 +17,7 @@
                 <strong>Sozialrecht</strong><br>
             </div>
         </div>
-        <div class="col-4 text-center mb-2">       
+        <div class="col-12 col-sm-4 text-center mb-2">       
             <div class="recht">
                 <strong>Arbeitsrecht</strong><br>
                 &bullet; Abmahnung<br>
