--- a/public_html/templates/zurPerson.html
+++ b/public_html/templates/zurPerson.html
@@ -1,24 +1,31 @@
 <div id="zurPerson" class="container ml-4">
-    <div class="row">
-        <div class="col-12 text-center">
-            <h4><i class="fas fa-user-circle"></i>&nbsp;&nbsp;Zur Person</h4>
+  <div class="row">
+    <div class="col-12 text-center">
+      <h4><i class="fas fa-user-circle"></i>&nbsp;&nbsp;Zur Person</h4>
+    </div>
+    <div class="col-12 col-md-8 text-center mt-2"> 
+      <div class="row">
+        <div class="col-12 col-sm-7 text-center">
+          <img src="./assets/images/RA_Landvogt.jpg" alt="RA Joachim Landvogt"/>
         </div>
-        <div class="col-12 col-md-6 text-center mt-2"> 
-            <div class="row">
-                <div class="col-7 text-right">
-                    <img src="./assets/images/RA_Landvogt.jpg" alt="RA Joachim Landvogt"/>
-                </div>
-                <div class="col-5 text-left">Seit 1985 arbeite ich in eigener Praxis und auch heute noch mit Freude und Engagement für Sie, vornehmlich Rockenberg und Umgebung.<br>
-                    Es ist aber auch möglich, meine Rechtstätigkeit national und international in Anspruch zu nehmen.
-                </div>
-            </div>
+        <div class="col-12 col-sm-5 text-left"><br><br>Seit 1985 arbeite ich in eigener Praxis und auch heute noch mit Freude und Engagement für Sie, vornehmlich Rockenberg und Umgebung.<br>
+          Es ist aber auch möglich, meine Rechtstätigkeit national und international in Anspruch zu nehmen.<br><br>
         </div>
-        <div class="col-12 col-md-6 text-center">    
-            <div id="videoRechtsberatung" class="ml-5 pl-5">
-                <iframe width="280" height="175" src="https://www.youtube.com/embed/kKYhfi9hE6E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
-            <label for="videoRechtsberatung" class="ml-5 pl-5 pt-3">Ich kann diesen Vortrag nur nachdrücklich unterstützen</label>
+      </div>
+    </div>
+    <div class="col-12 col-md-4 text-right">
+      <div class="card text-right" id="videoRechtsberatung" style="width: 100%">
+        <iframe style="width:100%" src="https://www.youtube.com/embed/kKYhfi9hE6E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <div class="card-body">
+          <h5 class="card-title text-left">Rechtsberatung</h5>
+          <p class="card-text text-left">Ich kann diesen Vortrag nur nachdrücklich unterstützen</p>          
         </div>
-    </div>    
-    <hr>
+      </div>
+      <div>
+
+      </div>
+
+    </div>
+  </div>    
+  <hr>
 </div>
