--- a/public_html/templates/zurPerson.html
+++ b/public_html/templates/zurPerson.html
@@ -5,15 +5,21 @@
     </div>
     <div class="col-12 col-md-8 text-center mt-2"> 
       <div class="row">
-        <div class="col-12 col-sm-7 text-center">
-          <img src="./assets/images/RA_Landvogt.jpg" alt="RA Joachim Landvogt"/>
+         <div class="col-12 col-sm-10">
+          <div class="card text-right" id="zurPerson" style="width: 60%">
+           <img src="./assets/images/RA_Landvogt.jpg" alt="RA Joachim Landvogt"/>        
+          <div class="card-body">
+          <h5 class="card-title text-center">Über mich</h5>
+          <p class="card-text text-left">Seit 1985 arbeite ich in eigener Praxis und auch heute noch mit Freude und Engagement für Sie, vornehmlich Rockenberg und Umgebung.<br>
+          Es ist aber auch möglich, meine Rechtstätigkeit national und international in Anspruch zu nehmen.</p>          
         </div>
-        <div class="col-12 col-sm-5 text-left"><br><br>Seit 1985 arbeite ich in eigener Praxis und auch heute noch mit Freude und Engagement für Sie, vornehmlich Rockenberg und Umgebung.<br>
-          Es ist aber auch möglich, meine Rechtstätigkeit national und international in Anspruch zu nehmen.<br><br>
+          </div>
+          </div>
+        <div class="col-12 col-sm-2 text-left"><br><br><br><br>
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-4 text-right">
+    <div class="col-12 col-md-4 text-right mt-2">
       <div class="card text-right" id="videoRechtsberatung" style="width: 100%">
         <iframe style="width:100%" src="https://www.youtube.com/embed/kKYhfi9hE6E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <div class="card-body">
