final commit with pic, 28.06.2018

--- a/public_html/templates/header.html
+++ b/public_html/templates/header.html
@@ -2,7 +2,7 @@
     <div class="container">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-warning">        
         <a href="#"></a>        
-        <a class="navbar-brand mt-1 mb-2 fontBrand" href="#/home"><img id="logo" src="assets/images/hammer.png" alt="Logo">Rechtsanwalt<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rockenberg<br></a>
+        <a class="navbar-brand mt-1 mb-2 fontBrand" href="#/home"><img id="logo" src="assets/images/hammer.png" alt="Logo"><!--Rechtsanwalt<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rockenberg<br--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
